--- a/samples/magazine/css/magazine.css
+++ b/samples/magazine/css/magazine.css
@@ -39,47 +39,37 @@ body{
 	background:#0066FF;
 	opacity:0.2;
 	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	-ms-border-radius:10px;
-	-o-border-radius:10px;
 	border-radius:10px;
 	cursor:pointer;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+	-webkit-filter: alpha(opacity=20);
 	filter: alpha(opacity=20);
 }
 
 .magazine .region:hover{
 	opacity:0.5;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+	-webkit-filter: alpha(opacity=50);
 	filter: alpha(opacity=50);
 }
 
 .magazine .region.zoom{
 	opacity:0.01;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=1)";
+	-webkit-filter: alpha(opacity=1);
 	filter: alpha(opacity=1);
 }
 
 .magazine .region.zoom:hover{
 	opacity:0.2;
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=20)";
+	-webkit-filter: alpha(opacity=20);
 	filter: alpha(opacity=20);
 }
 
 .magazine .page{
 	-webkit-box-shadow:0 0 20px rgba(0,0,0,0.2);
-	-moz-box-shadow:0 0 20px rgba(0,0,0,0.2);
-	-ms-box-shadow:0 0 20px rgba(0,0,0,0.2);
-	-o-box-shadow:0 0 20px rgba(0,0,0,0.2);
 	box-shadow:0 0 20px rgba(0,0,0,0.2);
 }
 
 .magazine-viewport .page img{
-	-webkit-touch-callout: none;
 	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
 	user-select: none;
 	margin:0;
 }
@@ -91,11 +81,7 @@ body{
 	width:100%;
 	height:100%;
 
-	background:-webkit-gradient(linear, left top, right top, color-stop(0.95, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,0.2)));
 	background-image:-webkit-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
-	background-image:-moz-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
-	background-image:-ms-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
-	background-image:-o-linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
 	background-image:linear-gradient(left, rgba(0,0,0,0) 95%, rgba(0,0,0,0.2) 100%);
 }
 
@@ -106,11 +92,7 @@ body{
 	width:100%;
 	height:100%;
 
-	background:-webkit-gradient(linear, right top, left top, color-stop(0.95, rgba(0,0,0,0)), color-stop(1, rgba(0,0,0,0.15)));
 	background-image:-webkit-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
-	background-image:-moz-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
-	background-image:-ms-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
-	background-image:-o-linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
 	background-image:linear-gradient(right, rgba(0,0,0,0) 95%, rgba(0,0,0,0.15) 100%);
 }
 
@@ -132,14 +114,9 @@ body{
 
 .magazine-viewport .shadow{
 	-webkit-transition: -webkit-box-shadow 0.5s;
-	-moz-transition: -moz-box-shadow 0.5s;
-	-o-transition: -webkit-box-shadow 0.5s;
-	-ms-transition: -ms-box-shadow 0.5s;
+	transition: box-shadow 0.5s;
 
 	-webkit-box-shadow:0 0 20px #ccc;
-	-moz-box-shadow:0 0 20px #ccc;
-	-o-box-shadow:0 0 20px #ccc;
-	-ms-box-shadow:0 0 20px #ccc;
 	box-shadow:0 0 20px #ccc;
 }
 
@@ -154,18 +131,12 @@ body{
 .magazine-viewport .next-button{
 	right:-22px;
 	-webkit-border-radius:0 15px 15px 0;
-	-moz-border-radius:0 15px 15px 0;
-	-ms-border-radius:0 15px 15px 0;
-	-o-border-radius:0 15px 15px 0;
 	border-radius:0 15px 15px 0;
 }
 
 .magazine-viewport .previous-button{
 	left:-22px;
 	-webkit-border-radius:15px 0 0 15px;
-	-moz-border-radius:15px 0 0 15px;
-	-ms-border-radius:15px 0 0 15px;
-	-o-border-radius:15px 0 0 15px;
 	border-radius:15px 0 0 15px;
 }
 
@@ -200,9 +171,6 @@ body{
 
 .animated{
 	-webkit-transition:margin-left 0.5s;
-	-moz-transition:margin-left 0.5s;
-	-ms-transition:margin-left 0.5s;
-	-o-transition:margin-left 0.5s;
 	transition:margin-left 0.5s;
 }
 
@@ -226,30 +194,18 @@ body{
 	padding:0;
 	text-align:center;
 	-webkit-transform:scale3d(0.5, 0.5, 1);
-	-moz-transform:scale3d(0.5, 0.5, 1);
-	-o-transform:scale3d(0.5, 0.5, 1);
-	-ms-transform:scale3d(0.5, 0.5, 1);
 	transform:scale3d(0.5, 0.5, 1);
 	-webkit-transition:-webkit-transform ease-in-out 100ms;
-	-moz-transition:-moz-transform ease-in-out 100ms;
-	-ms-transition:-ms-transform ease-in-out 100ms;
-	-o-transition:-o-transform ease-in-out 100ms;
 	transition:transform ease-in-out 100ms;
 }
 
 .thumbanils-touch ul{
 	-webkit-transform:none;
-	-moz-transform:none;
-	-o-transform:none;
-	-ms-transform:none;
 	transform:none;
 }
 
 .thumbnails-hover ul{
 	-webkit-transform:scale3d(0.6, 0.6, 1);
-	-moz-transform:scale3d(0.6, 0.6, 1);
-	-o-transform:scale3d(0.6, 0.6, 1);
-	-ms-transform:scale3d(0.6, 0.6, 1);
 	transform:scale3d(0.6, 0.6, 1);
 }
 
@@ -258,15 +214,9 @@ body{
 	display:inline-block;
 	margin:0 5px;
 	-webkit-box-shadow:0 0 10px #ccc;
-	-moz-box-shadow:0 0 10px #ccc;
-	-ms-box-shadow:0 0 10px #ccc;
-	-o-box-shadow:0 0 10px #ccc;
 	box-shadow:0 0 10px  #ccc;
 	-webkit-transition:-webkit-transform 60ms;
-	-moz-transition:-webkit-transform 60ms;
-	-o-transition:-webkit-transform 60ms;
-	-ms-transition:-webkit-transform 60ms;
-	transition:-webkit-transform 60ms;
+	transition:transform 60ms;
 }
 
 .thumbnails li span{
@@ -275,31 +225,19 @@ body{
 
 .thumbnails .current{
 	-webkit-box-shadow:0 0 10px red;
-	-moz-box-shadow:0 0 10px red;
-	-ms-box-shadow:0 0 10px red;
-	-o-box-shadow:0 0 10px red;
 	box-shadow:0 0 10px red;
 }
 
 .thumbnails .thumb-hover{
 	-webkit-transform:scale3d(1.3, 1.3, 1);
-	-moz-transform:scale3d(1.3, 1.3, 1);
-	-o-transform:scale3d(1.3, 1.3, 1);
-	-ms-transform:scale3d(1.3, 1.3, 1);
 	transform:scale3d(1.3, 1.3, 1);
 
 	-webkit-box-shadow:0 0 10px #666;
-	-moz-box-shadow:0 0 10px #666;
-	-ms-box-shadow:0 0 10px #666;
-	-o-box-shadow:0 0 10px #666;
 	box-shadow:0 0 10px #666;
 }
 
 .thumbanils-touch .thumb-hover{
 	-webkit-transform:none;
-	-moz-transform:none;
-	-o-transform:none;
-	-ms-transform:none;
 	transform:none;
 }
 
@@ -340,9 +278,6 @@ body{
 	line-height:30px;
 	color:white;
 	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
-	-ms-border-radius:10px;
-	-o-border-radius:10px;
 	border-radius:10px;
 }
 
