--- a/samples/magazine/css/jquery.ui.css
+++ b/samples/magazine/css/jquery.ui.css
@@ -3,9 +3,6 @@
 	height:8px;
 	background:rgba(0,0,0, 0.2);
 	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	-o-border-radius:5px;
-	-ms-border-radius:5px;
 	border-radius:5px;
 	margin:20px auto;
 }
@@ -24,18 +21,6 @@
 	-webkit-transition:-webkit-transform 0.2s;
 	-webkit-border-radius:5px;
 
-	-moz-transform:translate3d(0px, 50px, 0px) scale(0.1, 0.1);
-	-moz-transition:-moz-transform 0.2s;
-	-moz-border-radius:5px;
-
-	-o-transform:translate3d(0px, 50px, 0px) scale(0.1, 0.1);
-	-o-transition:-o-transform 0.2s;
-	-o-border-radius:5px;
-
-	-ms-transform:translate3d(0px, 50px, 0px) scale(0.1, 0.1);
-	-ms-transition:-ms-transform 0.2s;
-	-ms-border-radius:5px;
-
 	transform:translate3d(0px, 50px, 0px) scale(0.1, 0.1);
 	transition:transform: 0.2s;
 	border-radius:5px;
@@ -43,9 +28,7 @@
 
 .no-transition{
 	-webkit-transition:none;
-	-moz-transition:none;
-	-o-transition:none;
-	-ms-transition:none;
+	transition:none;
 }
 
 .turnjs-slider .thumbnail div{
@@ -64,9 +47,6 @@
 	display:block;
 	opacity:1;
 	-webkit-transform:scale(1, 1);
-	-moz-transform:scale(1, 1);
-	-o-transform:scale(1, 1);
-	-ms-transform:scale(1, 1);
 	transform:scale(1, 1);
 }
 
@@ -103,8 +83,6 @@
 	height: 8px;
 	cursor: default;
 	-webkit-border-radius:5px;
-	-moz-border-radius:5px;
-	-ms-border-radius:5px;
 	border-radius:5px;
 }
 
@@ -127,9 +105,6 @@
 	opacity:0.2;
 	display:block;
 	-webkit-transition:opacity 0.2s;
-	-moz-transition:opacity 0.2s;
-	-ms-transition:opacity 0.2s;
-	-o-transition:opacity 0.2s;
 	transition:opacity 0.2s;
 }
 
